[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = "A Blog API using FastAPI"
authors = ["Oluwamuyiwa Dosunmu"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
